--- a/app/views/tasks/_new_creative_response.haml
+++ b/app/views/tasks/_new_creative_response.haml
@@ -14,7 +14,7 @@
             = render "stored_resources/new_image"
                           
         %span.error_message
-        %a.next.button.button-actionable{ style:"float:right;" } Next
+        %a.next.submit_button Next
       .tips
         %h4 
           %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;", alt: "Tip"}
@@ -36,8 +36,8 @@
         %span.help-block{ style: "margin-top: 15px; "} If the responses to your question can be evaluated and there's only one correct answer, place that answer here:
         = text_field_tag("task[exact1]", nil, placeholder: "Correct output...")
         %div{ style: "margin-top: 10px; "}
-          %a.back.button.button-standard{ style:"float:left; text-shadow:none; color:#333;" } Back
-          %a.next.button.button-actionable{ style:"float:right;" } Next   
+          %a.back.submit_button_standard{ style:"float:left; " } Back
+          %a.next.submit_button Next   
     
     %div.step3.hide
       %fieldset{style: "display: inline-block; width:98%;"}
@@ -53,8 +53,8 @@
           %span{style:" font-size:14px;"} Section: 
           %span{style:"font-weight:bold;font-size:14px;"} #{section.name}
         %h4{ style:"margin-bottom:15px;" } Ready to post?
-        %a.back.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
-        = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
+        %a.back.submit_button_standard{ style:"float:left; margin-bottom:10px;"} Back
+        = f.submit("Yes!", class: "submit_button")
     
     %div.step4.hide{ style: "width: 98%; "}
       %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px; width: 40px;", alt: "Stoney"}
@@ -62,5 +62,5 @@
       %h4{style:"margin-top:12px; font-size:16px;"} Your Creative Response is now visible to the MetaBright community!
       %h4{style:"margin-top:12px; font-size:16px;"} You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a CR!
       %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} If you'd like, you can <a class="take">post a response</a> to your CR now. 
-      %a.restart.button.button-actionable{ style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another question
-      %a.finish.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
+      %a.restart.submit_button{ style:"margin-bottom:10px; text-shadow:none;"} Create another question
+      %a.finish.submit_button_standard{ style:"float:left; margin-bottom:10px;"} Finish
