--- a/app/views/evaluations/new.html.haml
+++ b/app/views/evaluations/new.html.haml
@@ -1,1 +1,1 @@
-= render "evaluations/form", { form_title: "New Evaluation", form_url: group_evaluations_url(@group), form_method: "post" }
+= render "evaluations/form", { form_title: "New Evaluation", form_url: group_evaluations_url(@group), form_method: :post }
