--- a/app/views/evaluations/review.html.haml
+++ b/app/views/evaluations/review.html.haml
@@ -1,5 +1,5 @@
-#employer.aboutcontainer
-  #create_evaluation.aboutbox{ style: "padding: 8px; "}
+#employer.employer-container
+  #create_evaluation.employer-box{ style: "padding: 8px; "}
     %div{ style: "width: 100%; border-bottom: 1px solid #DDD;" }
       = image_tag STONEY_SMALL_URL, style: "height: 115px; display: inline; vertical-align: middle", alt: "Stoney"
       %h1{ style: "display: inline; vertical-align: middle; font-size:50px;" } Create an Evaluation
