--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -1,16 +1,25 @@
 @import "variables.css.scss";
 
+.documentation { padding: 10px 20px; }
+
 body.employer {background-color: $solid_employer_bg_color; background-image: none;}
 //body.employer { background-image: $employer_bg_pattern; background-repeat: repeat; background-size: auto; }
 body.employer .container.body { width: inherit; background-color: transparent; padding: 0px; }
-.employer-container { width: 980px; border: 1px solid rgba(0, 0, 0, 0.1); border-radius: 0px; margin: 40px auto 0 auto; background-color: rgba(36, 72, 109, 0.8); height: 100%; padding-top:1px;}
-.documentation { padding: 10px 20px; }
+
+.employer-container { 
+  width: 1040px; 
+  border: 1px solid rgba(0, 0, 0, 0.1); 
+  border-radius: 8px; 
+  margin: 40px auto 0 auto; 
+  background-color: rgba(36, 72, 109, 0.8); 
+  height: 100%; padding-top:1px;
+}
 
 .employer-box {
-  margin:12px; 
+  margin: 5px; 
   background-color:white; 
   min-height: 600px; 
-  border-radius: 0; 
+  border-radius: 4px; 
   border:1px solid rgba(0, 0, 0, .1);
   overflow:hidden; 
   padding:20px 20px 5px 20px;
@@ -30,7 +39,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     margin: 4px 0 4px -8px; 
   }
   .first_timer {
-    margin: 80px auto;
+    margin: 40px auto;
     width: 375px;
     text-align: center;
     padding: 20px 20px 30px;
