--- a/app/views/groups/dashboard.html.haml
+++ b/app/views/groups/dashboard.html.haml
@@ -1,14 +1,13 @@
 :css
-  .aboutcontainer{ width: 900px; margin-top: -30px; border-radius: 0; }
-  .aboutbox .header { margin-bottom: 10px;}
-  .aboutbox .header img { height: 72px; margin-top: -15px; }
-  .aboutbox .header h2 { display: inline-block; font-size: 30px; }
-  .aboutbox .header hr { margin: 8px; }
+  .employer-box .header { margin-bottom: 10px; }
+  .employer-box .header img { height: 72px; margin-top: -15px; }
+  .employer-box .header h2 { display: inline-block; font-size: 30px; }
+  .employer-box .header hr { margin: 8px; }
   .documentation { padding: 10px 20px; }
   .container .body { padding: 0; }
 
-#employer.aboutcontainer
-  .aboutbox
+#employer.employer-container{ style: "width: 900px; margin-top: -30px; border-radius: 0;" }
+  .employer-box
     .header
       %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
       %h2 #{@group.name} Account Settings
