--- a/app/views/paths/start.html.haml
+++ b/app/views/paths/start.html.haml
@@ -1,9 +1,5 @@
-:css
-  .aboutcontainer{ width: 900px; margin-top: 35px;}
-
-
-#employer.aboutcontainer
-  .aboutbox{ style: "padding: 8px;"}
+#employer.employer-container{ style: "width: 900px; margin-top: 35px;" }
+  .employer-box{ style: "padding: 8px;"}
     %div{ style: "width: 100%; border-bottom: 1px solid #DDD;" }
       = image_tag STONEY_SMALL_URL, style: "height: 115px; display: inline; vertical-align: middle", alt: "Stoney"
       %h1{ style: "display: inline; vertical-align: middle; font-size:50px;" } Create a Challenge
