--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -196,7 +196,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
   }
 }
 
-#evaluations_overview{
+#evaluations_overview {
   background: $employer_blue;
   
   .aboutbox{
@@ -387,7 +387,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
 }
 
 #evaluation_manager{
-  .aboutbox {
+  .employer-box {
     .header {
       .controls {
         float: right; 
