--- a/app/views/evaluations/submit.html.haml
+++ b/app/views/evaluations/submit.html.haml
@@ -6,8 +6,8 @@
     $('.textfill').textfill({ maxFontPixels: 50 });
   });
 
-#employer.employer-container{ style: "width: 900px; margin-bottom: 70px;" }
-  #take_evaluatione.employer-box
+#employer.employer-container{ style: "width: 900px; margin: 75px auto 70px auto;" }
+  #take_evaluation.employer-box{ style: "min-height: 200px;" }
     .header
       .image_box
         = image_tag GIANT_STONEY, style: "height: 100px;"
@@ -22,4 +22,4 @@
       %hr{ style: "margin-bottom: 10px;"}
       %h3 Did you know MetaBright lets you prove your professional credentials?
       %p Join thousands of people who use MetaBright to measure and showcase their skills.
-      = link_to "View Your Private Profile", profile_path(current_user.username), class: "submit_button_big"}
+      = link_to "View Your Private Profile", profile_path(current_user.username), class: "submit_button_big"
