--- a/app/views/groups/signup/confirmation.html.haml
+++ b/app/views/groups/signup/confirmation.html.haml
@@ -5,7 +5,7 @@
 #order_confirmation.employer-container{ style: "width: 760px; background: rgba(36, 72, 109, 0.8); border-radius: 0; margin-top:42px;" }
   .employer-box{ style: "border-radius: 0; padding: 20px;" }
     .header
-      %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
+      %img{ src: GIANT_STONEY, alt: "Stoney"}
       .text{ style: ""}
         - if @was_trial
           %h1{ style: "margin-top:0;" } Upgrade Successful!
