purchase form fix

--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -46,7 +46,7 @@
 
 #employer_product.employer-container{ style: "width: 760px;"}
   .employer-box
-    .aboutheader
+    .aboutheader{ style: "margin-bottom: -12px;"}
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
       %div{ style: "display: inline-block; vertical-align: top; margin-top: 31px;"}
         %h1 MetaBright Evaluator
