--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -95,7 +95,7 @@
     
 #challenge_editor.employer-container
   .employer-box
-    .header
+    .header{ style: "margin-top:10px;"}
       %div
         %a.edit_caption_container.edit_path_settings_button{ style: "cursor: pointer;", title: "Click to edit" }
           = image_tag(@path.path_pic, class: "small-header-image")
