--- a/app/views/evaluations/show.html.haml
+++ b/app/views/evaluations/show.html.haml
@@ -22,8 +22,8 @@
       %div{ style: "padding: 15px 15px 0 15px;"}
         = image_tag GIANT_STONEY, style:"display:inline; height:61px;", alt: "Stoney"
         %div{ style: "display: inline-block; vertical-align: top; margin-left: 5px; "}
-          %h2{ style: "font-size: 30px; margin-bottom: -10px; margin-top: -3px; " }= @evaluation.title
-          %h3{ style: "font-size:20px; "} Evaluation Results
+          %h2{ style: "font-size: 30px; margin-bottom: -2px; margin-top: -9px; " }= @evaluation.title
+          %h3{ style: "font-size:20px; margin-left: 5px; "} Evaluation Results
     .body{ style: "padding: 0 12px;"}
       %table.table
         %thead
